import ee.ria.DigiDoc.android.LibdigidocppPlugin

apply plugin: 'com.android.library'
apply plugin: LibdigidocppPlugin

android {
    namespace 'ee.ria.DigiDoc.sign'
    compileSdk project.compileSdkVersion

    defaultConfig {
        minSdkVersion project.minSdkVersion
        targetSdkVersion project.targetSdkVersion
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }

    testOptions {
        execution 'ANDROIDX_TEST_ORCHESTRATOR'
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    lint {
        lintConfig file('../lint.xml')
    }

    buildFeatures {
        buildConfig = true
    }
}

dependencies {
    api "androidx.annotation:annotation:${androidxVersion}"

    api "com.google.guava:guava:${guavaVersion}"
    api "com.squareup.okio:okio:${okioVersion}"

    implementation "com.jakewharton.timber:timber:${timberVersion}"

    implementation "com.google.auto.value:auto-value-annotations:${autoValueVersion}"
    annotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"

    implementation ("com.tom-roush:pdfbox-android:${pdfboxVersion}") {
        exclude group: "org.bouncycastle"
    }

    implementation "commons-io:commons-io:${commonsioVersion}"

    implementation project(':common-lib')

    androidTestUtil "androidx.test:orchestrator:${androidxTestOrchestratorVersion}"
    androidTestAnnotationProcessor "com.google.auto.value:auto-value:${autoValueVersion}"
    androidTestImplementation "androidx.test.ext:junit:${androidxTestVersion}"
    androidTestImplementation "androidx.test:rules:${androidxTestRulesVersion}"
    androidTestImplementation "androidx.test.espresso:espresso-core:${androidxTestEspressoVersion}"
    androidTestImplementation "com.google.truth:truth:${truthVersion}"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    api project(':configuration-lib')
}
